Add Some file and Update some details to the website

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -4,6 +4,42 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome to TopGameReview</title>
+    <link rel="stylesheet" href="~/css/index.css">
+</head>
+<body>
+    <h1 class="welcome-tags">Welcome to TopGameReview</h1>
+    <section class="block">
+        <a href="~/TopFreeGame_Pages/Shooting/FreeShootingGames_Page_1" class="title">Top Free Shooting Games</a>
+        <div class="pic">
+            <img src="https://www.talkesport.com/wp-content/uploads/CSGO-Operation-10-Details.jpg" 
+                 alt="This is a picture of Vanny" class="image">
+        </div>
+        <p class="description">Descriptions</p>
+    </section>
+    <hr>
+    <section class="block">
+        <a href="" class="title">Top Free Simulation Games</a>
+        <div class="pic">
+            <img src="https://cdn-ext.fanatical.com/production/product/1280x720/d9df9fc7-36b4-4f08-ab6e-5cb807c76805.jpeg" 
+                 alt="This is a picture of Vanny" class="image">
+        </div>
+        <p class="description">Descriptions</p>
+    </section>
+    <hr>
+    <section class="block">
+        <a href="" class="title">Top Free Survial Games</a>
+        <div class="pic">
+            <img src="https://s3.ap-southeast-1.amazonaws.com/cdn.vcgamers.com/news/wp-content/uploads/2023/02/Sons-of-The-Forest.jpg" 
+                 alt="This is a picture of Vanny" class="image">
+        </div>
+        <p class="description">Descriptions</p>
+    </section>
+</body>
+</html>
