--- a/Pages/TopFreeGame_Pages/Shooting/FreeShootingGames_Page_1.cshtml
+++ b/Pages/TopFreeGame_Pages/Shooting/FreeShootingGames_Page_1.cshtml
@@ -13,7 +13,7 @@
 
         @for (int i = 0; i <= length; i++)
         {
-            <p>Hello World @i</p>
+            <p>Hello World! @i</p>
         }
     }
 </div>
