Update some game and page in FreeShootingGame_Page cshtml

--- a/Pages/TopFreeGame_Pages/Shooting/FreeShootingGames_Page_1.cshtml
+++ b/Pages/TopFreeGame_Pages/Shooting/FreeShootingGames_Page_1.cshtml
@@ -16,35 +16,275 @@
 <body>
     <div>
         <h1 class="welcome-txt">Welcome to Top Free Shooting Games</h1>
-        <section class="block">
+        <nav class="shotcut-tags">
+            <a href="">CSGO</a>
+            <a href="">Apex Legend</a>
+            <a href="">CSGO</a>
+            <a href="">CSGO</a>
+            <a href="">CSGO</a>
+            <a href="">CSGO</a>
+            <a href="#block-10">CSGO</a>
+        </nav>
+
+        @* block-1 *@
+        <section class="block" id="block-1">
             <span>
                 <img src="https://www.talkesport.com/wp-content/uploads/CSGO-Operation-10-Details.jpg" 
                 alt="This the pic of the <Game Name>"
                 width="550px" height="326px">
             </span>
             <span class="descriptions">
-                <a href="" class="title">Counter Strike Global Offical</a>
+                <a href="https://store.steampowered.com/app/730/CounterStrike_Global_Offensive/" 
+                target="_blank"
+                class="title">1. Counter Strike Global Offical</a>
                 <p>Descriptions</p>
                 <p>Rate: </p>
                 <p>Publisher: </p>
                 <p>Release Date: </p>
+                <span class="genre-tags">
+                    <p>tags</p>
+                    <p>tags</p>
+                    <p>tags</p>
+                    <p>tags</p>
+                    <p>tags</p>
+                </span>
             </span>
         </section>
         <hr>
-        <section class="block">
+
+        @* block-2 *@
+        <section class="block" id="block-2">
+            <span>
+                <img src="https://media.contentapi.ea.com/content/dam/apex-legends/common/apex-hunted-primary-thumbnail.jpg.adapt.crop191x100.628p.jpg" 
+                alt="This the pic of the <Game Name>"
+                width="550px" height="326px">
+            </span>
+            <span class="descriptions">
+                <a href="https://store.steampowered.com/app/1172470/Apex_Legends/" 
+                target="_blank"
+                class="title">2. Apex Legend</a>
+                <p>Descriptions</p>
+                <p>Rate: </p>
+                <p>Publisher: </p>
+                <p>Release Date: </p>
+                <span class="genre-tags">
+                    <p>tags</p>
+                    <p>tags</p>
+                    <p>tags</p>
+                    <p>tags</p>
+                    <p>tags</p>
+                </span>
+            </span>
+        </section>
+        <hr>
+
+        @* block-3 *@
+        <section class="block" id="block-3">
             <span>
                 <img src="https://www.talkesport.com/wp-content/uploads/CSGO-Operation-10-Details.jpg" 
                 alt="This the pic of the <Game Name>"
                 width="550px" height="326px">
             </span>
             <span class="descriptions">
-                <a href="" class="title">Counter Strike Global Offical</a>
+                <a href="https://store.steampowered.com/app/730/CounterStrike_Global_Offensive/" 
+                target="_blank"
+                class="title">3. Counter Strike Global Offical</a>
                 <p>Descriptions</p>
                 <p>Rate: </p>
                 <p>Publisher: </p>
                 <p>Release Date: </p>
+                <span class="genre-tags">
+                    <p>tags</p>
+                    <p>tags</p>
+                    <p>tags</p>
+                    <p>tags</p>
+                    <p>tags</p>
+                </span>
             </span>
         </section>
+        <hr>
+
+        @* block-4 *@
+        <section class="block" id="block-4">
+            <span>
+                <img src="https://www.talkesport.com/wp-content/uploads/CSGO-Operation-10-Details.jpg" 
+                alt="This the pic of the <Game Name>"
+                width="550px" height="326px">
+            </span>
+            <span class="descriptions">
+                <a href="https://store.steampowered.com/app/730/CounterStrike_Global_Offensive/" 
+                target="_blank"
+                class="title">4. Counter Strike Global Offical</a>
+                <p>Descriptions</p>
+                <p>Rate: </p>
+                <p>Publisher: </p>
+                <p>Release Date: </p>
+                <span class="genre-tags">
+                    <p>tags</p>
+                    <p>tags</p>
+                    <p>tags</p>
+                    <p>tags</p>
+                    <p>tags</p>
+                </span>
+            </span>
+        </section>
+        <hr>
+
+        @* block-5 *@
+        <section class="block" id="block-5">
+            <span>
+                <img src="https://www.talkesport.com/wp-content/uploads/CSGO-Operation-10-Details.jpg" 
+                alt="This the pic of the <Game Name>"
+                width="550px" height="326px">
+            </span>
+            <span class="descriptions">
+                <a href="https://store.steampowered.com/app/730/CounterStrike_Global_Offensive/" 
+                target="_blank"
+                class="title">5. Counter Strike Global Offical</a>
+                <p>Descriptions</p>
+                <p>Rate: </p>
+                <p>Publisher: </p>
+                <p>Release Date: </p>
+                <span class="genre-tags">
+                    <p>tags</p>
+                    <p>tags</p>
+                    <p>tags</p>
+                    <p>tags</p>
+                    <p>tags</p>
+                </span>
+            </span>
+        </section>
+        <hr>
+
+        @* block-6 *@
+        <section class="block" id="block-6">
+            <span>
+                <img src="https://www.talkesport.com/wp-content/uploads/CSGO-Operation-10-Details.jpg" 
+                alt="This the pic of the <Game Name>"
+                width="550px" height="326px">
+            </span>
+            <span class="descriptions">
+                <a href="https://store.steampowered.com/app/730/CounterStrike_Global_Offensive/" 
+                target="_blank"
+                class="title">6. Counter Strike Global Offical</a>
+                <p>Descriptions</p>
+                <p>Rate: </p>
+                <p>Publisher: </p>
+                <p>Release Date: </p>
+                <span class="genre-tags">
+                    <p>tags</p>
+                    <p>tags</p>
+                    <p>tags</p>
+                    <p>tags</p>
+                    <p>tags</p>
+                </span>
+            </span>
+        </section>
+        <hr>
+
+        @* block-7 *@
+        <section class="block" id="block-7">
+            <span>
+                <img src="https://www.talkesport.com/wp-content/uploads/CSGO-Operation-10-Details.jpg" 
+                alt="This the pic of the <Game Name>"
+                width="550px" height="326px">
+            </span>
+            <span class="descriptions">
+                <a href="https://store.steampowered.com/app/730/CounterStrike_Global_Offensive/" 
+                target="_blank"
+                class="title">7. Counter Strike Global Offical</a>
+                <p>Descriptions</p>
+                <p>Rate: </p>
+                <p>Publisher: </p>
+                <p>Release Date: </p>
+                <span class="genre-tags">
+                    <p>tags</p>
+                    <p>tags</p>
+                    <p>tags</p>
+                    <p>tags</p>
+                    <p>tags</p>
+                </span>
+            </span>
+        </section>
+        <hr>
+
+        @* block-8 *@
+        <section class="block" id="block-8">
+            <span>
+                <img src="https://www.talkesport.com/wp-content/uploads/CSGO-Operation-10-Details.jpg" 
+                alt="This the pic of the <Game Name>"
+                width="550px" height="326px">
+            </span>
+            <span class="descriptions">
+                <a href="https://store.steampowered.com/app/730/CounterStrike_Global_Offensive/" 
+                target="_blank"
+                class="title">8. Counter Strike Global Offical</a>
+                <p>Descriptions</p>
+                <p>Rate: </p>
+                <p>Publisher: </p>
+                <p>Release Date: </p>
+                <span class="genre-tags">
+                    <p>tags</p>
+                    <p>tags</p>
+                    <p>tags</p>
+                    <p>tags</p>
+                    <p>tags</p>
+                </span>
+            </span>
+        </section>
+        <hr>
+
+        @* block-9 *@
+        <section class="block" id="block-9">
+            <span>
+                <img src="https://www.talkesport.com/wp-content/uploads/CSGO-Operation-10-Details.jpg" 
+                alt="This the pic of the <Game Name>"
+                width="550px" height="326px">
+            </span>
+            <span class="descriptions">
+                <a href="https://store.steampowered.com/app/730/CounterStrike_Global_Offensive/" 
+                target="_blank"
+                class="title">9. Counter Strike Global Offical</a>
+                <p>Descriptions</p>
+                <p>Rate: </p>
+                <p>Publisher: </p>
+                <p>Release Date: </p>
+                <span class="genre-tags">
+                    <p>tags</p>
+                    <p>tags</p>
+                    <p>tags</p>
+                    <p>tags</p>
+                    <p>tags</p>
+                </span>
+            </span>
+        </section>
+        <hr>
+
+        @* block-10 *@
+        <section class="block" id="block-10">
+            <span>
+                <img src="https://www.talkesport.com/wp-content/uploads/CSGO-Operation-10-Details.jpg" 
+                alt="This the pic of the <Game Name>"
+                width="550px" height="326px">
+            </span>
+            <span class="descriptions">
+                <a href="https://store.steampowered.com/app/730/CounterStrike_Global_Offensive/" 
+                target="_blank"
+                class="title">10. Counter Strike Global Offical</a>
+                <p>Descriptions</p>
+                <p>Rate: </p>
+                <p>Publisher: </p>
+                <p>Release Date: </p>
+                <span class="genre-tags">
+                    <p>tags</p>
+                    <p>tags</p>
+                    <p>tags</p>
+                    <p>tags</p>
+                    <p>tags</p>
+                </span>
+            </span>
+        </section>
+        <hr>
     </div>
 </body>
 </html>
