--- a/wwwroot/css/FreeShootingGame.css
+++ b/wwwroot/css/FreeShootingGame.css
@@ -1,6 +1,29 @@
+/* HTML */
+
+html {
+    scroll-behavior: smooth;
+    user-select: none;
+}
+
+/* Styling */
+.shotcut-tags {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.shotcut-tags a {
+    margin-right: 2rem;
+    font-size: 16pt;
+    background-color: rgba(201, 201, 201, 0.432);
+    padding: 0.3rem 1.5rem 0.3rem 1.5rem;
+    text-align: center;
+    border-radius: 2rem;
+    font-family:Arial, Helvetica, sans-serif;
+
+}
 .welcome-txt {
     text-align: center;
-    margin: 3rem;
+    margin: 3rem 0 3rem 0;
     font-size: 36pt;
 }
 .block {
@@ -16,12 +39,33 @@ img {
     margin-left: 2rem;
     font-size: 20pt;
     font-weight: 600;
-    text-decoration: none;
+    text-decoration: underline;
     color: black;
 }
 .descriptions p {
     color: black;
     margin-left: 2rem;
     margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
     font-size: 13pt;
+}
+.genre-tags p {
+    display: inline;
+    background-color: rgba(201, 201, 201, 0.432);
+    padding: 0.3rem 1.5rem 0.3rem 1.5rem;
+    text-align: center;
+    border-radius: 2rem;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size: 12pt;
+}
+
+/* Animation */
+
+.descriptions a:hover {
+    margin-left: 2rem;
+    font-size: 20pt;
+    font-weight: 600;
+    text-decoration: none;
+    color: rgb(255, 0, 0);
+    transition: ease-in 0.15s;
 }
