Add some pictures and remove the link of the picture

--- a/Pages/TopFreeGame_Pages/Shooting/FreeShootingGames_Page_1.cshtml
+++ b/Pages/TopFreeGame_Pages/Shooting/FreeShootingGames_Page_1.cshtml
@@ -29,7 +29,7 @@
         @* block-1 *@
         <section class="block" id="block-1">
             <span>
-                <img src="https://www.talkesport.com/wp-content/uploads/CSGO-Operation-10-Details.jpg" 
+                <img src="~/pic/CSGO.jpg" 
                 alt="This the pic of the <Game Name>"
                 width="550px" height="326px">
             </span>
@@ -55,7 +55,7 @@
         @* block-2 *@
         <section class="block" id="block-2">
             <span>
-                <img src="https://media.contentapi.ea.com/content/dam/apex-legends/common/apex-hunted-primary-thumbnail.jpg.adapt.crop191x100.628p.jpg" 
+                <img src="~/pic/APEX_LEGEND.jpg" 
                 alt="This the pic of the <Game Name>"
                 width="550px" height="326px">
             </span>
