--- a/Pages/TopFreeGame_Pages/Shooting/FreeShootingGames_Page_1.cshtml
+++ b/Pages/TopFreeGame_Pages/Shooting/FreeShootingGames_Page_1.cshtml
@@ -53,16 +53,14 @@
         <hr>
 
         @* block-2 *@
-        <section class="block" id="block-2">
+        <section class="block" id="block-3">
             <span>
-                <img src="https://media.contentapi.ea.com/content/dam/apex-legends/common/apex-hunted-primary-thumbnail.jpg.adapt.crop191x100.628p.jpg" 
+                <img src="~" 
                 alt="This the pic of the <Game Name>"
                 width="550px" height="326px">
             </span>
             <span class="descriptions">
-                <a href="https://store.steampowered.com/app/1172470/Apex_Legends/" 
-                target="_blank"
-                class="title">2. Apex Legend</a>
+                <h2 class="title">2. Apex Legend</h2>
                 <p>Descriptions</p>
                 <p>Rate: </p>
                 <p>Publisher: </p>
@@ -74,6 +72,10 @@
                     <p>tags</p>
                     <p>tags</p>
                 </span>
+                <p>You can get it on: 
+                    <a href="">steam</a>
+                    <a href="">GOG</a>
+                </p>
             </span>
         </section>
         <hr>
@@ -86,9 +88,7 @@
                 width="550px" height="326px">
             </span>
             <span class="descriptions">
-                <a href="https://store.steampowered.com/app/730/CounterStrike_Global_Offensive/" 
-                target="_blank"
-                class="title">3. Counter Strike Global Offical</a>
+                <h2 class="title">3. Counter Strike Global Offical</h2>
                 <p>Descriptions</p>
                 <p>Rate: </p>
                 <p>Publisher: </p>
@@ -100,6 +100,10 @@
                     <p>tags</p>
                     <p>tags</p>
                 </span>
+                <p>You can get it on: 
+                    <a href="">steam</a>
+                    <a href="">GOG</a>
+                </p>
             </span>
         </section>
         <hr>
