--- a/Pages/TopFreeGame_Pages/Shooting/FreeShootingGames_Page_1.cshtml
+++ b/Pages/TopFreeGame_Pages/Shooting/FreeShootingGames_Page_1.cshtml
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="~/css/FreeShootingGame.css">
 </head>
 <body>
-    <div>
+    <div class="Part-1">
         <h1 class="welcome-txt">Welcome to Top Free Shooting Games</h1>
         <nav class="shotcut-tags">
             <div class="options">
@@ -30,7 +30,8 @@
                 <a href="#block-10">Valorant</a>
             </div>
         </nav>
-
+    </div>
+    <div>
         @* block-1 *@
         <section class="block" id="block-1">
             <span>
@@ -40,49 +41,51 @@
             </span>
             <span class="descriptions">
                 <h2 class="title">1. Counter Strike Global Offical</h2>
-                <p>Descriptions: </p>
-                <p>Rate: </p>
-                <p>Publisher: </p>
-                <p>Release Date: </p>
-                <span class="genre-tags">
-                    <p>tags</p>
-                    <p>tags</p>
-                    <p>tags</p>
-                    <p>tags</p>
-                    <p>tags</p>
-                </span>
-                <p>You can get it on: 
-                    <a href="">Steam</a>
+                <p><b>Descriptions: </b>The game pits two teams, Terrorists and Counter-Terrorists, against each other in different objective-based game modes. The most common game modes involve the Terrorists planting a bomb while Counter-Terrorists attempt to stop them, or Counter-Terrorists attempting to rescue hostages that the Terrorists have captured. There are nine official game modes, all of which have distinct characteristics specific to that mode. The game also has matchmaking support that allows players to play on dedicated Valve servers, in addition to community-hosted servers with custom maps and game modes. A battle-royale game-mode, "Danger Zone", was introduced in late 2018.</p>
+                <p><b>Rate: </b> All: 7,102,969 reviews / Positive: 6,293,901 reviews</p>
+                <p><b>Publisher: </b>Value</p>
+                <p><b>Release Date: </b>22 August 2012</p>
+                <p><b>You can get it on:</b>&nbsp;
+                    <a href="">Steam,</a>&nbsp;
                     <a href="">GOG</a>
                 </p>
+                <span class="genre-tags">
+                    <p>FPS</p>
+                    <p>Competitive</p>
+                    <p>Shooter</p>
+                    <p>Multiplayer</p>
+                    <p>Action</p>
+                    <p>Strategy</p>
+                </span>
             </span>
         </section>
         <hr>
 
         @* block-2 *@
-        <section class="block" id="block-3">
+        <section class="block" id="block-2">
             <span>
-                <img src="~/pic/APEX_LEGEND.jpg" 
+                <img src="~/pic/Apex-Legend.jpg" 
                 alt="This the pic of the <Game Name>"
                 width="550px" height="326px">
             </span>
             <span class="descriptions">
                 <h2 class="title">2. Apex Legend</h2>
-                <p>Descriptions</p>
-                <p>Rate: </p>
-                <p>Publisher: </p>
-                <p>Release Date: </p>
-                <span class="genre-tags">
-                    <p>tags</p>
-                    <p>tags</p>
-                    <p>tags</p>
-                    <p>tags</p>
-                    <p>tags</p>
-                </span>
-                <p>You can get it on: 
-                    <a href="">steam</a>
+                <p><b>Descriptions: </b>Before the match, players form into two- or three-player squads, and select from pre-designed characters with distinctive abilities, known as "Legends". The game has two gameplay modes. In "Battle Royale", up to 20 three-person squads or 30 two-person duos land on an island and search for weapons and supplies before attempting to defeat all other players in combat. The available play area on the island shrinks over time, forcing players to keep moving or else find themselves outside the play area which can be fatal. The final team alive wins the round. In "Arenas", players form into three-player squads and fight against another squad in a 3v3 team deathmatch over a series of rounds to determine the winner of the match. Teams win when their team has at least 3 points and is 2 points ahead.</p>
+                <p><b>Rate: </b>All: 628,592 / Positive: 520,232</p>
+                <p><b>Publisher: </b>Electronic Arts</p>
+                <p><b>Release Date: </b>05 November 2020</p>
+                <p><b>You can get it on:</b>&nbsp;
+                    <a href="">Steam,</a>&nbsp;
                     <a href="">GOG</a>
                 </p>
+                <span class="genre-tags">
+                    <p>Battle Royal</p>
+                    <p>Shooter</p>
+                    <p>Multiplayer</p>
+                    <p>Free to Play</p>
+                    <p>Team-Based</p>
+                    <p>FPS</p>
+                </span>
             </span>
         </section>
         <hr>
@@ -90,16 +93,20 @@
         @* block-3 *@
         <section class="block" id="block-3">
             <span>
-                <img src="https://www.talkesport.com/wp-content/uploads/CSGO-Operation-10-Details.jpg" 
+                <img src="~/pic/Team-Fortress.jpg" 
                 alt="This the pic of the <Game Name>"
                 width="550px" height="326px">
             </span>
             <span class="descriptions">
                 <h2 class="title">3. Team Fortress 2</h2>
-                <p>Descriptions</p>
-                <p>Rate: </p>
-                <p>Publisher: </p>
-                <p>Release Date: </p>
+                <p><b>Descriptions: </b></p>
+                <p><b>Rate: </b></p>
+                <p><b>Publisher: </b></p>
+                <p><b>Release Date: </b></p>
+                <p><b>You can get it on:</b>&nbsp;
+                    <a href="">Steam,</a>&nbsp;
+                    <a href="">GOG</a>
+                </p>
                 <span class="genre-tags">
                     <p>tags</p>
                     <p>tags</p>
@@ -107,10 +114,6 @@
                     <p>tags</p>
                     <p>tags</p>
                 </span>
-                <p>You can get it on: 
-                    <a href="">steam</a>
-                    <a href="">GOG</a>
-                </p>
             </span>
         </section>
         <hr>
@@ -118,16 +121,20 @@
         @* block-4 *@
         <section class="block" id="block-4">
             <span>
-                <img src="https://www.talkesport.com/wp-content/uploads/CSGO-Operation-10-Details.jpg" 
+                <img src="~/pic/The-Cycle.jpg" 
                 alt="This the pic of the <Game Name>"
                 width="550px" height="326px">
             </span>
             <span class="descriptions">
                 <h2 class="title">4. The Cycle: Frontier </h2>
-                <p>Descriptions</p>
-                <p>Rate: </p>
-                <p>Publisher: </p>
-                <p>Release Date: </p>
+                <p><b>Descriptions: </b></p>
+                <p><b>Rate: </b></p>
+                <p><b>Publisher: </b></p>
+                <p><b>Release Date: </b></p>
+                <p><b>You can get it on:</b>&nbsp;
+                    <a href="">Steam,</a>&nbsp;
+                    <a href="">GOG</a>
+                </p>
                 <span class="genre-tags">
                     <p>tags</p>
                     <p>tags</p>
@@ -135,10 +142,6 @@
                     <p>tags</p>
                     <p>tags</p>
                 </span>
-                <p>You can get it on: 
-                    <a href="">steam</a>
-                    <a href="">GOG</a>
-                </p>
             </span>
         </section>
         <hr>
@@ -146,16 +149,20 @@
         @* block-5 *@
         <section class="block" id="block-5">
             <span>
-                <img src="https://www.talkesport.com/wp-content/uploads/CSGO-Operation-10-Details.jpg" 
+                <img src="~/pic/Warframe.png    " 
                 alt="This the pic of the <Game Name>"
                 width="550px" height="326px">
             </span>
             <span class="descriptions">
                 <h2 class="title">5. Warframe</h2>
-                <p>Descriptions</p>
-                <p>Rate: </p>
-                <p>Publisher: </p>
-                <p>Release Date: </p>
+                <p><b>Descriptions: </b></p>
+                <p><b>Rate: </b></p>
+                <p><b>Publisher: </b></p>
+                <p><b>Release Date: </b></p>
+                <p><b>You can get it on:</b>&nbsp;
+                    <a href="">Steam,</a>&nbsp;
+                    <a href="">GOG</a>
+                </p>
                 <span class="genre-tags">
                     <p>tags</p>
                     <p>tags</p>
@@ -163,10 +170,6 @@
                     <p>tags</p>
                     <p>tags</p>
                 </span>
-                <p>You can get it on: 
-                    <a href="">steam</a>
-                    <a href="">GOG</a>
-                </p>
             </span>
         </section>
         <hr>
@@ -174,16 +177,20 @@
         @* block-6 *@
         <section class="block" id="block-6">
             <span>
-                <img src="https://www.talkesport.com/wp-content/uploads/CSGO-Operation-10-Details.jpg" 
+                <img src="~/pic/Pubg-Battleground.jpg" 
                 alt="This the pic of the <Game Name>"
                 width="550px" height="326px">
             </span>
             <span class="descriptions">
                 <h2 class="title">6. Player Unknown Battle Ground</h2>
-                <p>Descriptions</p>
-                <p>Rate: </p>
-                <p>Publisher: </p>
-                <p>Release Date: </p>
+                <p><b>Descriptions: </b></p>
+                <p><b>Rate: </b></p>
+                <p><b>Publisher: </b></p>
+                <p><b>Release Date: </b></p>
+                <p><b>You can get it on:</b>&nbsp;
+                    <a href="">Steam,</a>&nbsp;
+                    <a href="">GOG</a>
+                </p>
                 <span class="genre-tags">
                     <p>tags</p>
                     <p>tags</p>
@@ -191,10 +198,6 @@
                     <p>tags</p>
                     <p>tags</p>
                 </span>
-                <p>You can get it on: 
-                    <a href="">steam</a>
-                    <a href="">GOG</a>
-                </p>
             </span>
         </section>
         <hr>
@@ -202,16 +205,20 @@
         @* block-7 *@
         <section class="block" id="block-7">
             <span>
-                <img src="https://www.talkesport.com/wp-content/uploads/CSGO-Operation-10-Details.jpg" 
+                <img src="~/pic/Fornite.jpg" 
                 alt="This the pic of the <Game Name>"
                 width="550px" height="326px">
             </span>
             <span class="descriptions">
                 <h2 class="title">7. Fortnite</h2>
-                <p>Descriptions</p>
-                <p>Rate: </p>
-                <p>Publisher: </p>
-                <p>Release Date: </p>
+                <p><b>Descriptions: </b></p>
+                <p><b>Rate: </b></p>
+                <p><b>Publisher: </b></p>
+                <p><b>Release Date: </b></p>
+                <p><b>You can get it on:</b>&nbsp;
+                    <a href="">Steam,</a>&nbsp;
+                    <a href="">GOG</a>
+                </p>
                 <span class="genre-tags">
                     <p>tags</p>
                     <p>tags</p>
@@ -219,10 +226,6 @@
                     <p>tags</p>
                     <p>tags</p>
                 </span>
-                <p>You can get it on: 
-                    <a href="">steam</a>
-                    <a href="">GOG</a>
-                </p>
             </span>
         </section>
         <hr>
@@ -230,16 +233,20 @@
         @* block-8 *@
         <section class="block" id="block-8">
             <span>
-                <img src="https://www.talkesport.com/wp-content/uploads/CSGO-Operation-10-Details.jpg" 
+                <img src="~/pic/Destiny-2.jpg" 
                 alt="This the pic of the <Game Name>"
                 width="550px" height="326px">
             </span>
             <span class="descriptions">
                 <h2 class="title">8. Destiny 2</h2>
-                <p>Descriptions</p>
-                <p>Rate: </p>
-                <p>Publisher: </p>
-                <p>Release Date: </p>
+                <p><b>Descriptions: </b></p>
+                <p><b>Rate: </b></p>
+                <p><b>Publisher: </b></p>
+                <p><b>Release Date: </b></p>
+                <p><b>You can get it on:</b>&nbsp;
+                    <a href="">Steam,</a>&nbsp;
+                    <a href="">GOG</a>
+                </p>
                 <span class="genre-tags">
                     <p>tags</p>
                     <p>tags</p>
@@ -247,10 +254,6 @@
                     <p>tags</p>
                     <p>tags</p>
                 </span>
-                <p>You can get it on: 
-                    <a href="">steam</a>
-                    <a href="">GOG</a>
-                </p>
             </span>
         </section>
         <hr>
@@ -258,16 +261,20 @@
         @* block-9 *@
         <section class="block" id="block-9">
             <span>
-                <img src="https://www.talkesport.com/wp-content/uploads/CSGO-Operation-10-Details.jpg" 
+                <img src="~/pic/Rouge-Company.jpg" 
                 alt="This the pic of the <Game Name>"
                 width="550px" height="326px">
             </span>
             <span class="descriptions">
                 <h2 class="title">9. Rouge Company</h2>
-                <p>Descriptions</p>
-                <p>Rate: </p>
-                <p>Publisher: </p>
-                <p>Release Date: </p>
+                <p><b>Descriptions: </b></p>
+                <p><b>Rate: </b></p>
+                <p><b>Publisher: </b></p>
+                <p><b>Release Date: </b></p>
+                <p><b>You can get it on:</b>&nbsp;
+                    <a href="">Steam,</a>&nbsp;
+                    <a href="">GOG</a>
+                </p>
                 <span class="genre-tags">
                     <p>tags</p>
                     <p>tags</p>
@@ -282,16 +289,20 @@
         @* block-10 *@
         <section class="block" id="block-10">
             <span>
-                <img src="https://www.talkesport.com/wp-content/uploads/CSGO-Operation-10-Details.jpg" 
+                <img src="~/pic/Valorant.jpg" 
                 alt="This the pic of the <Game Name>"
                 width="550px" height="326px">
             </span>
             <span class="descriptions">
                 <h2 class="title">10. Valorant</h2>
-                <p>Descriptions</p>
-                <p>Rate: </p>
-                <p>Publisher: </p>
-                <p>Release Date: </p>
+                <p><b>Descriptions: </b></p>
+                <p><b>Rate: </b></p>
+                <p><b>Publisher: </b></p>
+                <p><b>Release Date: </b></p>
+                <p><b>You can get it on:</b>&nbsp;
+                    <a href="">Steam,</a>&nbsp;
+                    <a href="">GOG</a>
+                </p>
                 <span class="genre-tags">
                     <p>tags</p>
                     <p>tags</p>
@@ -299,10 +310,6 @@
                     <p>tags</p>
                     <p>tags</p>
                 </span>
-                <p>You can get it on: 
-                    <a href="">steam</a>
-                    <a href="">GOG</a>
-                </p>
             </span>
         </section>
         <hr>
