--- a/wwwroot/css/FreeShootingGame.css
+++ b/wwwroot/css/FreeShootingGame.css
@@ -6,6 +6,19 @@ html {
 }
 
 /* Styling */
+
+.Part-1{
+    height: 100vh;
+    text-align: center;
+}
+.welcome-txt {
+    text-align: center;
+    padding: 10rem 0 10rem 0;
+    font-size: 54pt;
+}
+.shotcut-tags {
+    margin-bottom: 7rem;
+}
 .options {
     display: grid;
     grid-template-columns: auto auto auto auto auto;
@@ -26,16 +39,13 @@ html {
     text-decoration: none;
     transition: 0.35s ease-in-out 0s;
 }
-.welcome-txt {
-    text-align: center;
-    margin: 3rem 0 3rem 0;
-    font-size: 36pt;
-}
 .block {
     display: flex;
-    align-items: center;
+    justify-content: center;
     margin-top: 3rem;
     margin-bottom: 3rem;
+    width: 100vh;
+    width: auto;
 }
 img {
     border-radius: 2.5rem;
@@ -53,6 +63,11 @@ img {
     margin-bottom: 1.5rem;
     font-size: 13pt;
 }
+.genre-tags {
+    display: grid;
+    grid-template-columns: auto auto auto auto auto ;
+    grid-template-rows: auto auto auto auto auto;
+}
 .genre-tags p {
     display: inline;
     background-color: rgba(201, 201, 201, 0.432);
@@ -60,7 +75,7 @@ img {
     text-align: center;
     border-radius: 2rem;
     font-family:Arial, Helvetica, sans-serif;
-    font-size: 12pt;
+    font-size: 10pt;
 }
 
 /* Animation */
