--- a/Pages/TopFreeGame_Pages/Shooting/FreeShootingGames_Page_1.cshtml
+++ b/Pages/TopFreeGame_Pages/Shooting/FreeShootingGames_Page_1.cshtml
@@ -44,6 +44,7 @@
                 <p><b>Descriptions: </b>The game pits two teams, Terrorists and Counter-Terrorists, against each other in different objective-based game modes. The most common game modes involve the Terrorists planting a bomb while Counter-Terrorists attempt to stop them, or Counter-Terrorists attempting to rescue hostages that the Terrorists have captured. There are nine official game modes, all of which have distinct characteristics specific to that mode. The game also has matchmaking support that allows players to play on dedicated Valve servers, in addition to community-hosted servers with custom maps and game modes. A battle-royale game-mode, "Danger Zone", was introduced in late 2018.</p>
                 <p><b>Rate: </b> All: 7,102,969 reviews / Positive: 6,293,901 reviews</p>
                 <p><b>Publisher: </b>Value</p>
+                <p><b>Developer: </b>Value</p>
                 <p><b>Release Date: </b>22 August 2012</p>
                 <p><b>You can get it on:</b>&nbsp;
                     <a href="">Steam,</a>&nbsp;
@@ -73,6 +74,7 @@
                 <p><b>Descriptions: </b>Before the match, players form into two- or three-player squads, and select from pre-designed characters with distinctive abilities, known as "Legends". The game has two gameplay modes. In "Battle Royale", up to 20 three-person squads or 30 two-person duos land on an island and search for weapons and supplies before attempting to defeat all other players in combat. The available play area on the island shrinks over time, forcing players to keep moving or else find themselves outside the play area which can be fatal. The final team alive wins the round. In "Arenas", players form into three-player squads and fight against another squad in a 3v3 team deathmatch over a series of rounds to determine the winner of the match. Teams win when their team has at least 3 points and is 2 points ahead.</p>
                 <p><b>Rate: </b>All: 628,592 / Positive: 520,232</p>
                 <p><b>Publisher: </b>Electronic Arts</p>
+                <p><b>Developer: </b></p>
                 <p><b>Release Date: </b>05 November 2020</p>
                 <p><b>You can get it on:</b>&nbsp;
                     <a href="">Steam,</a>&nbsp;
@@ -102,6 +104,7 @@
                 <p><b>Descriptions: </b></p>
                 <p><b>Rate: </b></p>
                 <p><b>Publisher: </b></p>
+                <p><b>Developer: </b></p>
                 <p><b>Release Date: </b></p>
                 <p><b>You can get it on:</b>&nbsp;
                     <a href="">Steam,</a>&nbsp;
@@ -130,6 +133,7 @@
                 <p><b>Descriptions: </b></p>
                 <p><b>Rate: </b></p>
                 <p><b>Publisher: </b></p>
+                <p><b>Developer: </b></p>
                 <p><b>Release Date: </b></p>
                 <p><b>You can get it on:</b>&nbsp;
                     <a href="">Steam,</a>&nbsp;
@@ -158,6 +162,7 @@
                 <p><b>Descriptions: </b></p>
                 <p><b>Rate: </b></p>
                 <p><b>Publisher: </b></p>
+                <p><b>Developer: </b></p>
                 <p><b>Release Date: </b></p>
                 <p><b>You can get it on:</b>&nbsp;
                     <a href="">Steam,</a>&nbsp;
@@ -186,6 +191,7 @@
                 <p><b>Descriptions: </b></p>
                 <p><b>Rate: </b></p>
                 <p><b>Publisher: </b></p>
+                <p><b>Developer: </b></p>
                 <p><b>Release Date: </b></p>
                 <p><b>You can get it on:</b>&nbsp;
                     <a href="">Steam,</a>&nbsp;
@@ -214,6 +220,7 @@
                 <p><b>Descriptions: </b></p>
                 <p><b>Rate: </b></p>
                 <p><b>Publisher: </b></p>
+                <p><b>Developer: </b></p>
                 <p><b>Release Date: </b></p>
                 <p><b>You can get it on:</b>&nbsp;
                     <a href="">Steam,</a>&nbsp;
@@ -242,6 +249,7 @@
                 <p><b>Descriptions: </b></p>
                 <p><b>Rate: </b></p>
                 <p><b>Publisher: </b></p>
+                <p><b>Developer: </b></p>
                 <p><b>Release Date: </b></p>
                 <p><b>You can get it on:</b>&nbsp;
                     <a href="">Steam,</a>&nbsp;
@@ -270,6 +278,7 @@
                 <p><b>Descriptions: </b></p>
                 <p><b>Rate: </b></p>
                 <p><b>Publisher: </b></p>
+                <p><b>Developer: </b></p>
                 <p><b>Release Date: </b></p>
                 <p><b>You can get it on:</b>&nbsp;
                     <a href="">Steam,</a>&nbsp;
@@ -298,6 +307,7 @@
                 <p><b>Descriptions: </b></p>
                 <p><b>Rate: </b></p>
                 <p><b>Publisher: </b></p>
+                <p><b>Developer: </b></p>
                 <p><b>Release Date: </b></p>
                 <p><b>You can get it on:</b>&nbsp;
                     <a href="">Steam,</a>&nbsp;
